Bug 437943 - GLib-ERROR **: 22:18:15.792: Creating pipes for GWakeup: Too many open files on large comic collections
Summary: GLib-ERROR **: 22:18:15.792: Creating pipes for GWakeup: Too many open files ...
Status: RESOLVED FIXED
Alias: None
Product: peruse
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-01 09:09 UTC by wolthera
Modified: 2022-05-15 10:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2021-06-01 09:09:50 UTC
SUMMARY
When loading peruse on a large comic collection (1200+ in my case), you end up with

GLib-ERROR **: 22:18:15.792: Creating pipes for GWakeup: Too many open files

And then the program gets forced to shutdown.

Is there a way to limit the amount of files being opened at once?
Comment 1 Remko van Wagensveld 2022-04-28 19:27:00 UTC
I can confirm this behaviour and am currently looking into it.

With lsof I see that the opened fds are piling up.
Comment 2 Remko van Wagensveld 2022-05-06 19:19:16 UTC
Added merge request !28 fixing the bug.
Comment 3 Remko van Wagensveld 2022-05-15 10:07:18 UTC
Git commit 7b0050ab86d98cfd5a973c45029c8358b1f79bfa by Remko van Wagensveld.
Committed on 15/05/2022 at 09:12.
Pushed by carlschwan into branch 'master'.

Fix filedescriptor leak when indexing books

When calling ArchiveBookModel::setFilename with a valid filename of a comic book
the archive is opened but never closed again.

M  +1    -1    src/qtquick/ArchiveBookModel.cpp

https://invent.kde.org/graphics/peruse/commit/7b0050ab86d98cfd5a973c45029c8358b1f79bfa