Fix filedescriptor leak when indexing books

When calling ArchiveBookModel::setFilename with a valid filename of a comic book
the archive is opened but never closed again.

BUG: 437943